# aegis

./: .gitignore  BACKLOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/aegis-audit/: Cargo.toml
crates/aegis-audit/src/: lib.rs
crates/aegis-bridge/: Cargo.toml  README.md  pyproject.toml
crates/aegis-bridge/src/: lib.rs
crates/aegis-cache/: Cargo.toml
crates/aegis-cache/src/: lib.rs
crates/aegis-eval/: Cargo.toml
crates/aegis-eval/src/: lib.rs
crates/aegis-hitl/: Cargo.toml
crates/aegis-hitl/src/: lib.rs
crates/aegis-mesh/: Cargo.toml
crates/aegis-mesh/src/: lib.rs
crates/aegis-policy/: Cargo.toml
crates/aegis-policy/src/: lib.rs
crates/aegis-probe/: BUILD_EBPF.md  Cargo.toml
crates/aegis-probe-ebpf/: Cargo.toml
crates/aegis-probe-ebpf/src/: main.rs
crates/aegis-probe/src/: lib.rs  linux.rs
crates/aegis-probe/tests/: ebpf_test.rs
crates/aegis-server/: Cargo.toml
crates/aegis-server/src/: lib.rs
crates/aegis-web/: Cargo.toml  README.md  index.html
crates/aegis-web/src/: lib.rs
crates/kedge-audit/: Cargo.toml
crates/kedge-audit/src/: lib.rs
crates/kedge-bridge/: Cargo.toml  README.md  pyproject.toml
crates/kedge-bridge/src/: lib.rs
crates/kedge-cache/: Cargo.toml
crates/kedge-cache/src/: lib.rs
crates/kedge-compact/: Cargo.toml
crates/kedge-compact/src/: lib.rs
crates/kedge-core/: Cargo.toml
crates/kedge-core/src/: budget.rs  error.rs  lib.rs  safety.rs
crates/kedge-eval/: Cargo.toml
crates/kedge-eval/src/: lib.rs
crates/kedge-exec/: Cargo.toml
crates/kedge-exec/src/: lib.rs
crates/kedge-hitl/: Cargo.toml
crates/kedge-hitl/src/: lib.rs
crates/kedge-ledger/: Cargo.toml
crates/kedge-ledger/src/: lib.rs
crates/kedge-llm/: Cargo.toml
crates/kedge-llm/src/: lib.rs
crates/kedge-mcp/: Cargo.toml
crates/kedge-mcp/src/: lib.rs
crates/kedge-mcp/tests/: http.rs
crates/kedge-mesh/: Cargo.toml
crates/kedge-mesh/src/: lib.rs
crates/kedge-policy/: Cargo.toml
crates/kedge-policy/src/: lib.rs
crates/kedge-probe/: BUILD_EBPF.md  Cargo.toml
crates/kedge-probe-ebpf/: Cargo.toml  rust-toolchain.toml
crates/kedge-probe-ebpf/.cargo/: config.toml
crates/kedge-probe-ebpf/src/: main.rs
crates/kedge-probe/src/: lib.rs  linux.rs
crates/kedge-probe/tests/: ebpf_test.rs
crates/kedge-server/: Cargo.toml
crates/kedge-server/src/: lib.rs
crates/kedge-web/: Cargo.toml  README.md  index.html
crates/kedge-web/src/: lib.rs
crates/sturdy-compact/: Cargo.toml
crates/sturdy-compact/src/: lib.rs
crates/sturdy-core/: Cargo.toml
crates/sturdy-core/src/: budget.rs  error.rs  lib.rs  model.rs  react.rs
crates/sturdy-exec/: Cargo.toml
crates/sturdy-exec/src/: lib.rs
crates/sturdy-ledger/: Cargo.toml
crates/sturdy-ledger/src/: lib.rs
crates/sturdy-llm/: Cargo.toml
crates/sturdy-llm/src/: lib.rs
crates/sturdy-mcp/: Cargo.toml
crates/sturdy-mcp/src/: lib.rs
crates/sturdy-mcp/tests/: http.rs
scripts/: publish-remaining.sh  rename-to-kedge.sh
src/: main.rs  mcp_server.rs  telemetry.rs
tests/: cli.rs
