# Aegis — a deterministic AI agent execution & verification harness.
# The workspace root is also the `aegis` CLI binary.
[package]
name = "aegis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-throughput, deterministic AI agent execution harness and verification engine."
repository = "https://github.com/SturdyRobot/aegis"
homepage = "https://github.com/SturdyRobot/aegis"
readme = "README.md"
authors = ["Noel Jackson <noeljacksonjs@gmail.com>"]
keywords = ["agent", "llm", "harness", "mcp", "ai"]
categories = ["command-line-utilities", "development-tools"]
default-run = "aegis"

[[bin]]
name = "aegis"
path = "src/main.rs"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Noel Jackson <noeljacksonjs@gmail.com>"]
repository = "https://github.com/SturdyRobot/aegis"

# One source of truth for dependency versions across every crate.
[workspace.dependencies]
sturdy-core = { path = "crates/sturdy-core" }
sturdy-compact = { path = "crates/sturdy-compact" }
sturdy-mcp = { path = "crates/sturdy-mcp" }
sturdy-exec = { path = "crates/sturdy-exec" }
sturdy-ledger = { path = "crates/sturdy-ledger" }
sturdy-llm = { path = "crates/sturdy-llm" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync", "fs", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
nix = { version = "0.29", features = ["signal", "process"] }
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[dependencies]
sturdy-core = { workspace = true }
sturdy-compact = { workspace = true }
sturdy-mcp = { workspace = true }
sturdy-exec = { workspace = true }
sturdy-ledger = { workspace = true }
sturdy-llm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }
aegis-eval = { path = "crates/aegis-eval" }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[profile.release]
lto = "thin"
codegen-units = 1
