[package]
name = "kedge-ledger"
description = "SQLite audit logging and deterministic replay of agent trajectories."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kedge-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
