[package]
name = "kedge-policy"
description = "Lightweight user-space guardrails (blocked tools, PII redaction, budgets) from a TOML file."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kedge-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
regex = "1"
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }
