[package]
name = "kedge-web"
description = "WebAssembly bindings — runs the Kedge ReAct engine live in the browser (the hero demo)."
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/SturdyRobot/kedge"

# A cdylib for the browser. Excluded from the workspace (see root Cargo.toml) so
# the normal `cargo build`/CI stays native-only; build this with:
#   wasm-pack build crates/kedge-web --target web --release
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The real engine — no forks, no mocks of the core. What runs in the browser is
# the same deterministic ReAct state machine + budget enforcement as the CLI.
kedge-core = { path = "../kedge-core", version = "0.1.0" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
# Route Rust panics to console.error so a demo failure is legible, not a bare trap.
console_error_panic_hook = "0.1"

[profile.release]
# Smaller wasm bundle for a snappier first paint.
opt-level = "s"
lto = true
