[package]
name = "sturdy-compact"
description = "Tree-sitter AST-aware token compactor for context-window management."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sturdy-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
