[package]
name = "sturdy-compact"
description = "Multi-language (Rust/Python/JS/TS/Go) Tree-sitter token compactor for context-window management."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sturdy-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
