[package]
name = "sturdy-exec"
description = "Isolated Tokio subprocess runner (process groups) with auto-detecting build/test verification (cargo/go/npm/pytest) and cargo diagnostics."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sturdy-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
