[package]
name = "sturdy-llm"
description = "OpenAI-compatible chat reasoner (OpenAI / Ollama / vLLM / LM Studio) driving the ReAct loop."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sturdy-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
